--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "nest-app",
+  "name": "nestjs-news-blog",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -20,46 +21,48 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/serve-static": "^3.0.1",
-    "nodemailer": "^6.9.1",
+    "@nestjs-modules/mailer": "^1.6.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/typeorm": "^8.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "express-handlebars": "^5.3.2",
+    "hbs": "^4.1.2",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@supercharge/strings": "^2.0.0",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/hbs": "^4.0.1",
-    "@types/jest": "29.2.4",
+    "@types/jest": "27.0.2",
     "@types/multer": "^1.4.7",
-    "@types/node": "18.11.18",
+    "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "express-handlebars": "^5.3.2",
-    "hbs": "^4.2.0",
-    "jest": "29.3.1",
+    "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "29.0.3",
+    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "uuid": "^9.0.0"
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
